baseline CASI lista

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
             <div class="contenedor-I__titulo">
                 <h2>Jardines de ensueño</h2>
             </div>
-            <img src="imagenes/principal.jpg" alt="Imagen de flores ornamentales" class="contenedor-I__imagen">
+            <div id="img-principal">
+                <img id="imagen-vieja" src="imagenes/principal.jpg" alt="Imagen de flores ornamentales" class="contenedor-I__imagen">
+            </div>
+            
             <div class="contenedor-I__pie">
                 <h1>Plantas ornamentales</h1>
             </div>
@@ -160,7 +163,7 @@
             <p>2021</p>
         </div>
     </footer>
-    <script type="text/javascript" src="codigo.js"></script>
+    <script type="text/javascript" src="dom.js"></script>
 </body>
 
 </html>
