--- a/inspiracion.html
+++ b/inspiracion.html
@@ -68,7 +68,8 @@
         </div>
     </footer>
 
-    <script type="text/javascript" src="codigo.js"></script>
+    <script type="text/javascript" src="dom.js"></script>
+    <script type="text/javascript" src="infousuario.js"></script>
 
 </body>
 
