--- a/contacto.html
+++ b/contacto.html
@@ -83,7 +83,8 @@
             <p>2021</p>
         </div>
     </footer>
-    <script type="text/javascript" src="codigo.js"></script>
+    <script type="text/javascript" src="dom.js"></script>
+        <script type="text/javascript" src="infousuario.js"></script>
 </body>
 
 </html>
