cambio de imagen principal

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             <div class="contenedor-I__titulo">
                 <h2>Jardines de ensueño</h2>
             </div>
-            <div id="img-principal">
-                <img id="imagen-vieja" src="imagenes/principal.jpg" alt="Imagen de flores ornamentales" class="contenedor-I__imagen">
+            <div>
+                <img id="imagen-principal" src="imagenes/principal.jpg" alt="Imagen de flores ornamentales" class="contenedor-I__imagen">
             </div>
             
             <div class="contenedor-I__pie">
