arreglo bug de cambios hechos para ev integradora

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Plantas Ornamentales</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <link href="https://file.myfontastic.com/wJpx37CFbFkHmmpgNSbYp4/icons.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -57,9 +59,9 @@
                 <h2>Jardines de ensueño</h2>
             </div>
             <div>
-                <img id="imagen-principal" src="imagenes/principal.jpg" alt="Imagen de flores ornamentales" class="contenedor-I__imagen">
+                <img id="imagen-principal" src="imagenes/principal.jpg" alt="Imagen de flores ornamentales"
+                    class="contenedor-I__imagen">
             </div>
-            
             <div class="contenedor-I__pie">
                 <h1>Plantas ornamentales</h1>
             </div>
@@ -145,9 +147,10 @@
                     </a></figure>
             </div>
 
-            <a href="vermas/vermas_hortensia.html">
-                <div class="contenedor-D__mas">¿Quieres ver más fotos?</div>
-            </a>
+            <div class="contenedor-D__mas">
+                <a href="vermas/vermas_hortensia.html">Click para más fotos</a>
+            </div>
+
         </div>
     </section>
 
@@ -155,7 +158,7 @@
         <div class="footer__info-I">
             <details>
                 <summary>Fuentes</summary>
-                <p>Imagenes: <a href="https://pixabay.com/" target="_blank">Pixabay</a>,
+                <p>Imagenes: <a href="https://pixabay.com/" target="_blank">Pixabay</a>
                     Info: <a href="https://es.wikipedia.org/" target="_blank">Wikipedia</a></p>
             </details>
         </div>
