--- a/jazmin_de_leche.html
+++ b/jazmin_de_leche.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Plantas Ornamentales</title>
+    <title>Jazmín de leche - Plantas Ornamentales</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <link href="https://file.myfontastic.com/wJpx37CFbFkHmmpgNSbYp4/icons.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
@@ -33,6 +35,18 @@
             <div class="header-content__redes" id="frase">
                 <h4><span id="span__mariposa">"El secreto no es correr detrás de las mariposas… </span>
                     <span id="span__vengan"> es cuidar el jardín para que ellas vengan a tí." - MQ</span></h4>
+                <nav>
+                    <ul class="redes__ul-responsive">
+                        <li class="redes__li"><a href="https://www.twitter.com" class="icon-twitter"
+                                target="_blank"></a>
+                        </li>
+                        <li class="redes__li"><a href="https://www.instagram.com" class="icon-instagram"
+                                target="_blank"></a></li>
+                        <li class="redes__li"><a href="https://www.facebook.com" class="icon-facebook"
+                                target="_blank"></a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
         <a href="index.html"><img src="imagenes/logo.png" alt="Logo de la página Web" id="logo"></a>
@@ -138,9 +152,9 @@
                     </a></figure>
             </div>
 
-            <a href="vermas/vermas_jazmin_de_leche.html">
-                <div class="contenedor-D__mas">¿Quieres ver más fotos?</div>
-            </a>
+            <div class="contenedor-D__mas">
+                <a href="vermas/vermas_hortensia.html">Click para más fotos</a>
+            </div>
         </div>
     </section>
 
@@ -148,7 +162,7 @@
         <div class="footer__info-I">
             <details>
                 <summary>Fuentes</summary>
-                <p>Imagenes: <a href="https://pixabay.com/" target="_blank">Pixabay</a>,
+                <p>Imagenes: <a href="https://pixabay.com/" target="_blank">Pixabay</a>
                     Info: <a href="https://es.wikipedia.org/" target="_blank">Wikipedia</a></p>
             </details>
         </div>
