--- a/inspiracion.html
+++ b/inspiracion.html
@@ -82,8 +82,8 @@
         </div>
     </footer>
     <script type="text/javascript" src="dom.js"></script>
-
     <script type="text/javascript" src="infousuario.js"></script>
+    <script type="text/javascript" src="varyvect.js"></script>
 
 </body>
 
