--- a/contacto.html
+++ b/contacto.html
@@ -98,8 +98,7 @@
         </div>
     </footer>
     <script type="text/javascript" src="dom.js"></script>
-
-    <script type="text/javascript" src="infousuario.js"></script>
+    <script type="text/javascript" src="infousuariocontacto.js"></script>
 </body>
 
 </html>
