--- a/inspiracion.html
+++ b/inspiracion.html
@@ -82,7 +82,7 @@
         </div>
     </footer>
     <script type="text/javascript" src="dom.js"></script>
-    <script type="text/javascript" src="infousuario.js"></script>
+    <script type="text/javascript" src="infousuarioinspiracion.js"></script>
     <script type="text/javascript" src="varyvect.js"></script>
 
 </body>
