--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
         </div>
     </footer>
     <script type="text/javascript" src="dom.js"></script>
+    <script type="text/javascript" src="domindex.js"></script>
+
 </body>
 
 </html>
