--- a/contacto.html
+++ b/contacto.html
@@ -97,7 +97,7 @@
             <p>2021</p>
         </div>
     </footer>
-    <script type="text/javascript" src="dom.js"></script>
+    <!-- <script type="text/javascript" src="darkmode.js"></script> -->
     <script type="text/javascript" src="infousuariocontacto.js"></script>
 </body>
 
