--- a/inspiracion.html
+++ b/inspiracion.html
@@ -81,7 +81,7 @@
             <p>2021</p>
         </div>
     </footer>
-    <script type="text/javascript" src="dom.js"></script>
+    <!-- <script type="text/javascript" src="darkmode.js"></script> -->
     <script type="text/javascript" src="infousuarioinspiracion.js"></script>
     <script type="text/javascript" src="varyvect.js"></script>
 
