--- a/strelitzia.html
+++ b/strelitzia.html
@@ -152,7 +152,7 @@
             </div>
 
             <div class="contenedor-D__mas">
-                <a href="vermas/vermas_hortensia.html">Click para más fotos</a>
+                <a href="#">Click para más fotos</a>
             </div>
         </div>
     </section>
