--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
 
             <div class="contenedor-D__mas">
-                <a href="vermas/vermas_hortensia.html">Click para más fotos</a>
+                <a href="#"">Click para más fotos</a>
             </div>
 
         </div>
