cambios para evaluacion final js

--- a/index.html
+++ b/index.html
@@ -83,47 +83,47 @@
             </div>
 
             <div class="contenedor-D__plantas">
-                <figure class="plantas__figure"><a href="hortensia.html"><img src="imagenes/f_hortensia.jpg"
-                            alt="Imagen de Hortensias" class="plantas__imagen">
+                <figure class="plantas__figure"><a href="hortensia.html"><img id="imagen_hortensia"
+                            src="imagenes/f_hortensia.jpg" alt="Imagen de Hortensias" class="plantas__imagen">
                         <div class="plantas__descripcion" id="hortensia">
                             <h3>Hortensia</h3>
                         </div>
                     </a></figure>
             </div>
             <div class="contenedor-D__plantas">
-                <figure class="plantas__figure"><a href="agapanthus.html"><img src="imagenes/f_agapanthus.jpg"
-                            alt="Imagen de Agapanthus" class="plantas__imagen">
+                <figure class="plantas__figure"><a href="agapanthus.html"><img id="imagen_agapanthus"
+                            src="imagenes/f_agapanthus.jpg" alt="Imagen de Agapanthus" class="plantas__imagen">
                         <div class="plantas__descripcion" id="agapanthus">
                             <h3>Agapanthus</h3>
                         </div>
                     </a></figure>
             </div>
             <div class="contenedor-D__plantas">
-                <figure class="plantas__figure"><a href="helecho.html"><img src="imagenes/f_helecho.jpg"
-                            alt="Imagen de Helechos" class="plantas__imagen">
+                <figure class="plantas__figure"><a href="helecho.html"><img id="imagen_helecho"
+                            src="imagenes/f_helecho.jpg" alt="Imagen de Helechos" class="plantas__imagen">
                         <div class="plantas__descripcion" id="helecho">
                             <h3>Helecho</h3>
                         </div>
                     </a></figure>
             </div>
             <div class="contenedor-D__plantas">
-                <figure class="plantas__figure"><a href="strelitzia.html"><img src="imagenes/f_strelitzia.jpg"
-                            alt="Imagen de Strelitzias" class="plantas__imagen">
+                <figure class="plantas__figure"><a href="strelitzia.html"><img id="imagen_strelitzia"
+                            src="imagenes/f_strelitzia.jpg" alt="Imagen de Strelitzias" class="plantas__imagen">
                         <div class="plantas__descripcion" id="strelitzia">
                             <h3>Strelitzia</h3>
                         </div>
                     </a></figure>
             </div>
             <div class="contenedor-D__plantas">
-                <figure class="plantas__figure"><a href="petunia.html"><img src="imagenes/f_petunia.jpg"
-                            alt="Imagen de Petunias" class="plantas__imagen">
+                <figure class="plantas__figure"><a href="petunia.html"><img id="imagen_petunia"
+                            src="imagenes/f_petunia.jpg" alt="Imagen de Petunias" class="plantas__imagen">
                         <div class="plantas__descripcion" id="petunia">
                             <h3>Petunia</h3>
                         </div>
                     </a></figure>
             </div>
             <div class="contenedor-D__plantas">
-                <figure class="plantas__figure"><a href="azalea.html"><img src="imagenes/f_azalea.jpg"
+                <figure class="plantas__figure"><a href="azalea.html"><img id="imagen_azalea" src="imagenes/f_azalea.jpg"
                             alt="Imagen de Azaleas" class="plantas__imagen">
                         <div class="plantas__descripcion" id="azalea">
                             <h3>Azalea</h3>
@@ -131,16 +131,16 @@
                     </a></figure>
             </div>
             <div class="contenedor-D__plantas">
-                <figure class="plantas__figure"><a href="jazmin_azul.html"><img src="imagenes/f_jazmin_azul.jpg"
-                            alt="Imagen de Jazmín Azul" class="plantas__imagen">
+                <figure class="plantas__figure"><a href="jazmin_azul.html"><img id="imagen_jazmin_azul"
+                            src="imagenes/f_jazmin_azul.jpg" alt="Imagen de Jazmín Azul" class="plantas__imagen">
                         <div class="plantas__descripcion" id="jazmin_azul">
                             <h3>Jazmín Azul</h3>
                         </div>
                     </a></figure>
             </div>
             <div class="contenedor-D__plantas">
-                <figure class="plantas__figure"><a href="jazmin_de_leche.html"><img src="imagenes/f_jazmin_de_leche.jpg"
-                            alt="Imagen de Jazmín de Leche" class="plantas__imagen">
+                <figure class="plantas__figure"><a href="jazmin_de_leche.html"><img id="imagen_jazmin_de_leche"
+                            src="imagenes/f_jazmin_de_leche.jpg" alt="Imagen de Jazmín de Leche" class="plantas__imagen">
                         <div class="plantas__descripcion" id="jazmin_de_leche">
                             <h3 id="jazmin_de_leche_h3">Jazmín de Leche</h3>
                         </div>
@@ -166,8 +166,9 @@
             <p>2021</p>
         </div>
     </footer>
-    <script type="text/javascript" src="darkmode.js"></script>
-    <script type="text/javascript" src="domindex.js"></script>
+    <!-- <script type="text/javascript" src="js/darkmode.js"></script>
+    <script type="text/javascript" src="js/domindex.js"></script> -->
+    <script type='text/javascript' src="js/fotosdinamicas.js"></script>
 
 </body>
 
