--- a/contacto.html
+++ b/contacto.html
@@ -63,8 +63,8 @@
                 </figure>
             </div>
 
-            <form class="contacto__formulario" method="POST" action="#">
-                <ul>
+            <form class="contacto__formulario">
+                <!-- <ul>
                     <li>Nombre completo <input type="text" name="nombre" required></li>
                     <li>Email <input type="email" name="email" required> </li>
                     <li>Telefono <input type="number" name="tel" required> </li>
@@ -80,8 +80,33 @@
                     </li>
                     <li>Comentarios: <br> <textarea name="comentarios" cols="37" rows="4"></textarea> </li>
                     <li><input type="submit" id="submit"></li>
-                </ul>
+                </ul> -->
+                <label for="nombre">Nombre completo</label>
+                <input type="text" name="nombre" id="nombre" maxlength="40" autofocus>
+
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" maxlength="70">
+
+                <label for="tel">Teléfono</label>
+                <input type="number" name="tel" id="tel" pattern="\x2b[0-9]+">
+
+                <label for="motivos">Motivo de consulta</label>
+                <select name="motivos" id="motivos">
+                    <option value="">Elige una opción</option>
+                    <option value="consultas"> Consultas varias</option>
+                    <option value="viveros"> Viveros </option>
+                    <option value="clima"> Clima </option>
+                    <option value="asistencia"> Asistencia personalizada</option>
+                    <option value="otro"> Otro</option>
+                </select>
+
+                <label for="comentarios">Comentarios</label>
+                <textarea name="comentarios" cols="37" rows="4" id="comentarios"></textarea>
+
+                <input type="submit" id="submit">
             </form>
+
+
         </div>
     </section>
 
@@ -97,7 +122,9 @@
             <p>2021</p>
         </div>
     </footer>
-    <script type="text/javascript" src="infousuariocontacto.js"></script>
+    <!-- <script type="text/javascript" src="js/infousuariocontacto.js"></script> -->
+    <script type="text/javascript" src="js/validarformulario.js"></script>
+    <!-- <script type="text/javascript" src="js/validarformulario2.js"></script> -->
 </body>
 
 </html>
