--- a/inspiracion.html
+++ b/inspiracion.html
@@ -81,7 +81,7 @@
             <p>2021</p>
         </div>
     </footer>
-    <script type="text/javascript" src="varyvect.js"></script>
+    <!-- <script type="text/javascript" src="js/varyvect.js"></script> -->
 
 </body>
 
