agregado de fotos y jquery lightbox

--- a/contacto.html
+++ b/contacto.html
@@ -81,13 +81,13 @@
                     <li>Comentarios: <br> <textarea name="comentarios" cols="37" rows="4"></textarea> </li>
                     <li><input type="submit" id="submit"></li>
                 </ul> -->
-                <label for="nombre">Nombre completo</label>
+                <label for="nombre">Nombre completo*</label>
                 <input type="text" name="nombre" id="nombre" maxlength="40" autofocus>
 
-                <label for="email">Email</label>
+                <label for="email">Email*</label>
                 <input type="email" name="email" id="email" maxlength="70">
 
-                <label for="tel">Teléfono</label>
+                <label for="tel">Teléfono*</label>
                 <input type="number" name="tel" id="tel" pattern="\x2b[0-9]+">
 
                 <label for="motivos">Motivo de consulta</label>
@@ -100,10 +100,11 @@
                     <option value="otro"> Otro</option>
                 </select>
 
-                <label for="comentarios">Comentarios</label>
+                <label for="comentarios">Comentarios*</label>
                 <textarea name="comentarios" cols="37" rows="4" id="comentarios"></textarea>
 
                 <input type="submit" id="submit">
+                <p>* campos obligatorios</p>
             </form>
 
 
@@ -122,9 +123,9 @@
             <p>2021</p>
         </div>
     </footer>
-    <!-- <script type="text/javascript" src="js/infousuariocontacto.js"></script> -->
-    <script type="text/javascript" src="js/validarformulario.js"></script>
-    <!-- <script type="text/javascript" src="js/validarformulario2.js"></script> -->
+    <!-- <script type="text/javascript" src="jsFlor/infousuariocontacto.js"></script> -->
+    <script type="text/javascript" src="jsFlor/validarformulario.js"></script>
+    <!-- <script type="text/javascript" src="jsFlor/validarformulario2.js"></script> -->
 </body>
 
 </html>
