--- a/inspiracion.html
+++ b/inspiracion.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Inspiración - Plantas Ornamentales</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link href="css/lightbox.css" rel="stylesheet" />
     <link href="https://file.myfontastic.com/wJpx37CFbFkHmmpgNSbYp4/icons.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
@@ -67,6 +68,9 @@
         <iframe src="https://www.youtube.com/embed/LnC9Hyo_snk"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
+
+
+            
     </section>
 
     <footer>
@@ -81,7 +85,9 @@
             <p>2021</p>
         </div>
     </footer>
-    <!-- <script type="text/javascript" src="js/varyvect.js"></script> -->
+    <!-- <script type="text/javascript" src="jsFlor/varyvect.js"></script> -->
+    <script src="js/lightbox.js"></script>
+
 
 </body>
 
