--- a/inspiracion.html
+++ b/inspiracion.html
@@ -69,8 +69,36 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
 
-
-            
+        <div class="jardines__section-div">
+            <h2 class="jardines__section-h2" id="jardines-h3">Trabajos de nuestros paisajistas</h2>
+            <a href="imagenes/jardines/jardin1.jpg" data-lightbox="jardines-galeria"
+                data-title="Jardín por María Parilli"><img class="jardines-img" src="imagenes/jardines/jardin1.jpg"
+                    alt="Imagen de un jardin"></a>
+            <a href="imagenes/jardines/jardin2.jpg" data-lightbox="jardines-galeria"
+                data-title="Jardín por Martín Rosales"><img class="jardines-img" src="imagenes/jardines/jardin2.jpg"
+                    alt="Imagen de un jardin"></a>
+            <a href="imagenes/jardines/jardin3.jpg" data-lightbox="jardines-galeria"
+                data-title="Jardín por Julieta Marquatto"><img class="jardines-img" src="imagenes/jardines/jardin3.jpg"
+                    alt="Imagen de un jardin"></a>
+            <a href="imagenes/jardines/jardin4.jpg" data-lightbox="jardines-galeria"
+                data-title="Jardín por Tomás Rottili"><img class="jardines-img" src="imagenes/jardines/jardin4.jpg"
+                    alt="Imagen de un jardin"></a>
+            <a href="imagenes/jardines/jardin5.jpg" data-lightbox="jardines-galeria"
+                data-title="Jardín por Juana Lostich"><img class="jardines-img" src="imagenes/jardines/jardin5.jpg"
+                    alt="Imagen de un jardin"></a>
+            <a href="imagenes/jardines/jardin6.jpg" data-lightbox="jardines-galeria"
+                data-title="Jardín por Sabrina Pereira"><img class="jardines-img" src="imagenes/jardines/jardin6.jpg"
+                    alt="Imagen de un jardin"></a>
+            <a href="imagenes/jardines/jardin7.jpg" data-lightbox="jardines-galeria"
+                data-title="Jardín por María Parilli"><img class="jardines-img" src="imagenes/jardines/jardin7.jpg"
+                    alt="Imagen de un jardin"></a>
+            <a href="imagenes/jardines/jardin8.jpg" data-lightbox="jardines-galeria"
+                data-title="Jardín por Martín Rosales"><img class="jardines-img" src="imagenes/jardines/jardin8.jpg"
+                    alt="Imagen de un jardin"></a>
+            <a href="imagenes/jardines/jardin9.jpg" data-lightbox="jardines-galeria"
+                data-title="Jardín por Tomás Rottili"><img class="jardines-img" src="imagenes/jardines/jardin9.jpg"
+                    alt="Imagen de un jardin"></a>
+        </div>
     </section>
 
     <footer>
@@ -85,7 +113,8 @@
             <p>2021</p>
         </div>
     </footer>
-    <!-- <script type="text/javascript" src="jsFlor/varyvect.js"></script> -->
+    <script type="text/javascript" src="jsFlor/varyvect.js"></script>
+    <script src="js/lightbox-plus-jquery.js"></script>
     <script src="js/lightbox.js"></script>
 
 
