--- a/inspiracion.html
+++ b/inspiracion.html
@@ -57,9 +57,7 @@
         <div class="inspiracion__section-div">
             <h2 class="inspiracion__section-h2">¡Inspirate con nosotros!</h2>
         </div>
-        <iframe src="https://www.youtube.com/embed/dadDjd59a2s"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/pmpPXd-5qdg" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <div class="inspiracion__section-div" id="ideas">
             <h2 class="inspiracion__section-h2">¡Más ideas!</h2>
@@ -96,7 +94,7 @@
                 data-title="Jardín por Martín Rosales"><img class="jardines-img" src="imagenes/jardines/jardin8.jpg"
                     alt="Imagen de un jardin"></a>
             <a href="imagenes/jardines/jardin9.jpg" data-lightbox="jardines-galeria"
-                data-title="Jardín por Tomás Rottili"><img class="jardines-img" src="imagenes/jardines/jardin9.jpg"
+                data-title="Jardín por Tomás Rottili"><img class="jardines-img" id="jardin9" src="imagenes/jardines/jardin9.jpg"
                     alt="Imagen de un jardin"></a>
         </div>
     </section>
