descomentados los scripts

--- a/contacto.html
+++ b/contacto.html
@@ -95,7 +95,7 @@
             <h2 class="calculadora__section-h2">Calculá el costo de visita de uno de nuestros paisajistas a tu casa</h2>
         </div>
         <div class="calculadora-container ">
-            <!-- <label for="paisajista">Paisajista</label> -->
+
             <select name="paisajista" id="paisajista">
                 <option value="">Elige un paisajista</option>
                 <option value="parilli" id="parilli">María Parilli</option>
@@ -105,7 +105,7 @@
                 <option value="lostich" id="lostich">Juana Lostich</option>
                 <option value="pereira" id="pereira">Sabrina Pereira</option>
             </select>
-            <!-- <label for="ubicacion">Tu ubicación</label> -->
+ 
             <select name="ubicacion" id="ubicacion">
                 <option value="">Elige tu ubicación</option>
                 <option value="ciudad" id="ciudad"> Ciudad de Córdoba</option>
@@ -129,9 +129,8 @@
             <p>2021</p>
         </div>
     </footer>
-    <!-- <script type="text/javascript" src="jsFlor/infousuariocontacto.js"></script> -->
+    <script type="text/javascript" src="jsFlor/infousuariocontacto.js"></script>
     <script type="text/javascript" src="jsFlor/validarformulario.js"></script>
-    <!-- <script type="text/javascript" src="jsFlor/validarformulario2.js"></script> -->
     <script type="text/javascript" src="jsFlor/calculadora.js"></script>
 </body>
 
