--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
             <p>2021</p>
         </div>
     </footer>
-    <!-- <script type="text/javascript" src="jsFlor/darkmode.js"></script>
-    <script type="text/javascript" src="jsFlor/domindex.js"></script> -->
+    <script type="text/javascript" src="jsFlor/darkmode.js"></script>
+    <script type="text/javascript" src="jsFlor/domindex.js"></script>
     <script type='text/javascript' src="jsFlor/fotosdinamicas.js"></script>
 
 </body>
