--- a/contacto.html
+++ b/contacto.html
@@ -74,7 +74,7 @@
                 <label for="tel">Teléfono*</label>
                 <input type="number" name="tel" id="tel" pattern="\x2b[0-9]+">
 
-                <label for="motivos">Motivo de consulta</label>
+                <label for="motivos">Motivo de consulta*</label>
                 <select name="motivos" id="motivos">
                     <option value="">Elige una opción</option>
                     <option value="consultas"> Consultas varias</option>
