cambio de iframe por video

--- a/inspiracion.html
+++ b/inspiracion.html
@@ -57,15 +57,17 @@
         <div class="inspiracion__section-div">
             <h2 class="inspiracion__section-h2">¡Inspirate con nosotros!</h2>
         </div>
-        <iframe src="https://www.youtube.com/embed/pmpPXd-5qdg" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- <iframe src="https://www.youtube.com/embed/pmpPXd-5qdg" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+        <video src="videos/video1.mp4"></video>
 
         <div class="inspiracion__section-div" id="ideas">
             <h2 class="inspiracion__section-h2">¡Más ideas!</h2>
         </div>
 
-        <iframe src="https://www.youtube.com/embed/LnC9Hyo_snk"
+        <!-- <iframe src="https://www.youtube.com/embed/LnC9Hyo_snk"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+            allowfullscreen></iframe> -->
+        <video src="videos/video2.mp4"></video>
 
         <div class="jardines__section-div">
             <h2 class="jardines__section-h2" id="jardines-h3">Trabajos de nuestros paisajistas</h2>
@@ -94,8 +96,8 @@
                 data-title="Jardín por Martín Rosales"><img class="jardines-img" src="imagenes/jardines/jardin8.jpg"
                     alt="Imagen de un jardin"></a>
             <a href="imagenes/jardines/jardin9.jpg" data-lightbox="jardines-galeria"
-                data-title="Jardín por Tomás Rottili"><img class="jardines-img" id="jardin9" src="imagenes/jardines/jardin9.jpg"
-                    alt="Imagen de un jardin"></a>
+                data-title="Jardín por Tomás Rottili"><img class="jardines-img" id="jardin9"
+                    src="imagenes/jardines/jardin9.jpg" alt="Imagen de un jardin"></a>
         </div>
     </section>
 
