--- a/inspiracion.html
+++ b/inspiracion.html
@@ -58,16 +58,36 @@
             <h2 class="inspiracion__section-h2">¡Inspirate con nosotros!</h2>
         </div>
         <!-- <iframe src="https://www.youtube.com/embed/pmpPXd-5qdg" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-        <video src="videos/video1.mp4"></video>
-
-        <div class="inspiracion__section-div" id="ideas">
-            <h2 class="inspiracion__section-h2">¡Más ideas!</h2>
+        <div id="video__container">
+            <video src="videos/video1.mp4" id="video1"></video>
+            <nav class="controls">
+                <ul class="controls__ul">
+                    <li class="controls__li"><a id="backward" onclick="saltarVideo(-10)"><span
+                                class="icon-fast-backward"></span></a></li>
+                    <li class="controls__li"><a id="play" onclick="playVideo()"><span class="icon-play"></span></a></li>
+                    <li class="controls__li"><a id="stop" onclick="stopVideo()"><span class="icon-stop"></span></a></li>
+                    <li class="controls__li"><a id="forward" onclick="saltarVideo(10)"><span
+                                class="icon-fast-forward"></span></a></li>
+                </ul>
+            </nav>
         </div>
+
+        <!-- <div class="inspiracion__section-div" id="ideas">
+            <h2 class="inspiracion__section-h2">¡Más ideas!</h2>
+        </div> -->
 
         <!-- <iframe src="https://www.youtube.com/embed/LnC9Hyo_snk"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe> -->
-        <video src="videos/video2.mp4"></video>
+        <!-- <video src="videos/video2.mp4" id="video2" class="videoInsp"></video>
+        <nav class="controls">
+            <ul class="controls__ul">
+                <li class="controls__li"><a href="#" class="play"><span class="icon-play"></span></a></li>
+                <li class="controls__li"><a href="#" class="stop"><span class="icon-stop"></span></a></li>
+                <li class="controls__li"><a href="#" class="backward"><span class="icon-fast-backward"></span></a></li>
+                <li class="controls__li"><a href="#" class="forward"><span class="icon-fast-forward"></span></a></li>
+            </ul>
+        </nav> -->
 
         <div class="jardines__section-div">
             <h2 class="jardines__section-h2" id="jardines-h3">Trabajos de nuestros paisajistas</h2>
@@ -113,9 +133,10 @@
             <p>2021</p>
         </div>
     </footer>
-    <script type="text/javascript" src="jsFlor/varyvect.js"></script>
+    <!-- <script type="text/javascript" src="jsFlor/varyvect.js"></script>
     <script src="js/lightbox-plus-jquery.js"></script>
-    <script src="js/lightbox.js"></script>
+    <script src="js/lightbox.js"></script> -->
+    <script src="jsFlor/videocontrols.js" type="text/javascript"></script>
 
 
 </body>
