--- a/inspiracion.html
+++ b/inspiracion.html
@@ -59,7 +59,7 @@
         </div>
         <!-- <iframe src="https://www.youtube.com/embed/pmpPXd-5qdg" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         <div id="video__container">
-            <video src="videos/video1.mp4" id="video1"></video>
+            <video src="videos/video1.mp4" poster="imagenes/poster.png" id="video1"></video>
             <nav class="controls">
                 <ul class="controls__ul">
                     <li class="controls__li"><a id="backward" onclick="saltarVideo(-10)"><span
@@ -133,9 +133,9 @@
             <p>2021</p>
         </div>
     </footer>
-    <!-- <script type="text/javascript" src="jsFlor/varyvect.js"></script>
+    <script type="text/javascript" src="jsFlor/varyvect.js"></script>
     <script src="js/lightbox-plus-jquery.js"></script>
-    <script src="js/lightbox.js"></script> -->
+    <script src="js/lightbox.js"></script>
     <script src="jsFlor/videocontrols.js" type="text/javascript"></script>
 
 
