modulo 1 actividad 3 lista

--- a/contacto.html
+++ b/contacto.html
@@ -105,7 +105,7 @@
                 <option value="lostich" id="lostich">Juana Lostich</option>
                 <option value="pereira" id="pereira">Sabrina Pereira</option>
             </select>
- 
+
             <select name="ubicacion" id="ubicacion">
                 <option value="">Elige tu ubicación</option>
                 <option value="ciudad" id="ciudad"> Ciudad de Córdoba</option>
@@ -115,6 +115,28 @@
             <button id="calcularCosto">Calcular</button>
             <div class="costoTotal" id="costoTotal"></div>
         </div>
+
+        <div class="webpaisajistas__section-div">
+            <h2 class="webpaisajistas__section-h2">Conocé las webs personales de nuestros paisajistas</h2>
+        </div>
+
+        <div class="webpaisajistas-container" id="webpaisajistas-container">
+            <ul class="webpaisajistas-ul">
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer1.jpg">María Parilli</a></li>
+
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/hombre1.jpg">Martín Rosales</a></li>
+
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer2.jpg">Julieta Marquatto</a></li>
+
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/hombre2.jpg">Tomás Rottili</a></li>
+
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer3.jpg">Juana Lostich</a></li>
+
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer4.jpg">Sabrina Pereira</a></li>
+            </ul>
+        </div>
+
+
     </section>
 
     <footer>
