--- a/inspiracion.html
+++ b/inspiracion.html
@@ -59,7 +59,7 @@
         </div>
        
         <div id="video__container">
-            <video src="videos/video1.mp4" poster="imagenes/poster.png" id="video1"></video>
+            <video src="videos/video1.mp4" id="video1"></video>
            
             <nav class="controls">
                 <ul class="controls__ul">
