--- a/inspiracion.html
+++ b/inspiracion.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <link href="css/lightbox.css" rel="stylesheet" />
     <link href="https://file.myfontastic.com/wJpx37CFbFkHmmpgNSbYp4/icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
