arreglo poster video

--- a/inspiracion.html
+++ b/inspiracion.html
@@ -61,7 +61,7 @@
         </div>
        
         <div id="video__container">
-            <video src="videos/video1.mp4" id="video1"></video>
+            <video poster="imagenes/poster.webp" src="videos/video1.mp4" id="video1"></video>
            
             <nav class="controls">
                 <ul class="controls__ul">
