--- a/inspiracion.html
+++ b/inspiracion.html
@@ -6,7 +6,6 @@
     <title>Inspiración - Plantas Ornamentales</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <link href="css/lightbox.css" rel="stylesheet" />
-    <link href="https://file.myfontastic.com/wJpx37CFbFkHmmpgNSbYp4/icons.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
@@ -58,18 +57,16 @@
         <div class="inspiracion__section-div">
             <h2 class="inspiracion__section-h2">¡Inspirate con nosotros!</h2>
         </div>
-       
+
         <div id="video__container">
             <video poster="imagenes/poster.webp" src="videos/video1.mp4" id="video1"></video>
-           
+
             <nav class="controls">
                 <ul class="controls__ul">
-                    <li class="controls__li"><a id="backward" ><span
-                                class="icon-fast-backward"></span></a></li>
-                    <li class="controls__li"><a id="play" ><span class="icon-play"></span></a></li>
+                    <li class="controls__li"><a id="backward"><span class="icon-fast-backward"></span></a></li>
+                    <li class="controls__li"><a id="play"><span class="icon-play"></span></a></li>
                     <li class="controls__li"><a id="stop"><span class="icon-stop"></span></a></li>
-                    <li class="controls__li"><a id="forward"><span
-                                class="icon-fast-forward"></span></a></li>
+                    <li class="controls__li"><a id="forward"><span class="icon-fast-forward"></span></a></li>
                 </ul>
             </nav>
         </div>
