--- a/svg.html
+++ b/svg.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contacto - Plantas Ornamentales</title>
-    <link rel="stylesheet" type="text/css" href="estilos.css">   
+    <link rel="stylesheet" type="text/css" href="estilos.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
@@ -66,7 +66,7 @@
                     <circle cx="-30" cy="21" r="20"></circle>
                     <circle cx="-42" cy="-2" r="20"></circle>
                     <circle cx="-68" cy="-2" r="20"></circle>
-                    <path d="M-100,20 a20,20 0 1,1 40,0"></path>
+                    <path d="-M60,20 a20,20 0 1,1 40,0"></path>
                     <circle cx="-55" cy="20" r="15" fill="#e9b9dc" stroke="#892a6e"></circle>
                     <animateTransform attributeType="XML" attributeName="transform" type="translate" from="0" to="600"
                         dur="2.4s" repeatCount="indefinite" />
@@ -79,7 +79,7 @@
                     <circle cx="-30" cy="111" r="20"></circle>
                     <circle cx="-42" cy="88" r="20"></circle>
                     <circle cx="-68" cy="88" r="20"></circle>
-                    <path d="M-100,110 a20,20 0 1,1 40,0"></path>
+                    <path d="-M60,110 a20,20 0 1,1 40,0"></path>
                     <circle cx="-55" cy="110" r="15" fill="#ffeba3" stroke="#f0bc00"></circle>
                     <animateTransform attributeType="XML" attributeName="transform" type="translate" from="0" to="600"
                         dur="2.5s" repeatCount="indefinite" />
@@ -91,7 +91,7 @@
                     <circle cx="-30" cy="201" r="20"></circle>
                     <circle cx="-42" cy="178" r="20"></circle>
                     <circle cx="-68" cy="178" r="20"></circle>
-                    <path d="M-100,200 a20,20 0 1,1 40,0"></path>
+                    <path d="-M60,200 a20,20 0 1,1 40,0"></path>
                     <circle cx="-55" cy="200" r="15" fill="#ffaf8a" stroke="#a83500"></circle>
                     <animateTransform attributeType="XML" attributeName="transform" type="translate" from="0" to="600"
                         dur="2.8s" repeatCount="indefinite" />
@@ -106,7 +106,7 @@
                     <circle cx="-30" cy="291" r="20"></circle>
                     <circle cx="-42" cy="268" r="20"></circle>
                     <circle cx="-68" cy="268" r="20"></circle>
-                    <path d="M-100,290 a20,20 0 1,1 40,0"></path>
+                    <path d="-M60,290 a20,20 0 1,1 40,0"></path>
                     <circle cx="-55" cy="290" r="15" fill="#a3dfff" stroke="#006da8"></circle>
                     <animateTransform attributeType="XML" attributeName="transform" type="translate" from="0" to="600"
                         dur="2.1s" repeatCount="indefinite" />
@@ -119,7 +119,7 @@
                     <circle cx="-30" cy="381" r="20"></circle>
                     <circle cx="-42" cy="358" r="20"></circle>
                     <circle cx="-68" cy="358" r="20"></circle>
-                    <path d="M-100,380 a20,20 0 1,1 40,0"></path>
+                    <path d="-M60,380 a20,20 0 1,1 40,0"></path>
                     <circle cx="-55" cy="380" r="15" fill="#ffb8e4" stroke="#db0087"></circle>
                     <animateTransform attributeType="XML" attributeName="transform" type="translate" from="0" to="600"
                         dur="2.7s" repeatCount="indefinite" />
@@ -185,17 +185,27 @@
 
         <div class="webpaisajistas-container" id="webpaisajistas-container">
             <ul class="webpaisajistas-ul">
-                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer1.jpg">María Parilli</a></li>
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img
+                            class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer1.jpg">María Parilli</a></li>
 
-                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/hombre1.jpg">Martín Rosales</a></li>
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img
+                            class="webpaisajistas-img" src="imagenes/webs-paisajistas/hombre1.jpg">Martín Rosales</a>
+                </li>
 
-                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer2.jpg">Julieta Marquatto</a></li>
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img
+                            class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer2.jpg">Julieta Marquatto</a>
+                </li>
 
-                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/hombre2.jpg">Tomás Rottili</a></li>
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img
+                            class="webpaisajistas-img" src="imagenes/webs-paisajistas/hombre2.jpg">Tomás Rottili</a>
+                </li>
 
-                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer3.jpg">Juana Lostich</a></li>
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img
+                            class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer3.jpg">Juana Lostich</a></li>
 
-                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer4.jpg">Sabrina Pereira</a></li>
+                <li class="webpaisajistas-li"><a class="webpaisajistas-a" href="#webpaisajistas-container"><img
+                            class="webpaisajistas-img" src="imagenes/webs-paisajistas/mujer4.jpg">Sabrina Pereira</a>
+                </li>
             </ul>
         </div>
 
@@ -214,9 +224,9 @@
             <p>2021</p>
         </div>
     </footer>
-    <script type="text/javascript" src="jsFlor/infousuariocontacto.js"></script>
+    <!-- <script type="text/javascript" src="jsFlor/infousuariocontacto.js"></script>
     <script type="text/javascript" src="jsFlor/validarformulario.js"></script>
-    <script type="text/javascript" src="jsFlor/calculadora.js"></script>
+    <script type="text/javascript" src="jsFlor/calculadora.js"></script> -->
 </body>
 
 </html>
