baseline con bug

--- a/inspiracion.html
+++ b/inspiracion.html
@@ -101,6 +101,15 @@
                 data-title="Jardín por Tomás Rottili"><img class="jardines-img" id="jardin9"
                     src="imagenes/jardines/jardin9.jpg" alt="Imagen de un jardin"></a>
         </div>
+
+        <div class="inspiracion__section-div inspiracion__section-div-murales">
+            <h2 class="inspiracion__section-h2 inspiracion__section-h2-murales">¡También pintamos murales, mirá estos
+                patrones!</h2>
+        </div>
+        <div id="murales">
+            <canvas id="mural1" width="827" height="387"></canvas>
+        </div>
+
     </section>
 
     <footer>
@@ -115,10 +124,11 @@
             <p>2021</p>
         </div>
     </footer>
-    <script type="text/javascript" src="jsFlor/varyvect.js"></script>
+    <!-- <script type="text/javascript" src="jsFlor/varyvect.js"></script>
     <script src="js/lightbox-plus-jquery.js"></script>
     <script src="js/lightbox.js"></script>
-    <script src="jsFlor/videocontrols.js" type="text/javascript"></script>
+    <script src="jsFlor/videocontrols.js" type="text/javascript"></script> -->
+    <script src="jsFlor/canvas.js" type="text/javascript"></script>
 
 
 </body>
