--- a/inspiracion.html
+++ b/inspiracion.html
@@ -124,11 +124,12 @@
             <p>2021</p>
         </div>
     </footer>
-    <!-- <script type="text/javascript" src="jsFlor/varyvect.js"></script>
+
     <script src="js/lightbox-plus-jquery.js"></script>
     <script src="js/lightbox.js"></script>
-    <script src="jsFlor/videocontrols.js" type="text/javascript"></script> -->
+    <script src="jsFlor/videocontrols.js" type="text/javascript"></script>
     <script src="jsFlor/canvas.js" type="text/javascript"></script>
+    <!-- <script type="text/javascript" src="jsFlor/varyvect.js"></script> -->
 
 
 </body>
