circulos colores canvas

--- a/inspiracion.html
+++ b/inspiracion.html
@@ -108,6 +108,14 @@
         </div>
         <div id="murales">
             <canvas id="mural1" width="827" height="387"></canvas>
+
+        </div>
+
+        <div class="inspiracion__section-div inspiracion__section-div-paletas">
+            <h2 class="inspiracion__section-h2 inspiracion__section-h2-paletas">¡Este es el top 5 de combinaciones para murales más elegidos!</h2>
+        </div>
+        <div id="paletas">
+            <canvas id="paleta1" width="827" height="187"></canvas>
         </div>
 
     </section>
