--- a/contacto.html
+++ b/contacto.html
@@ -148,7 +148,9 @@
                 </select>
 
                 <label for="comentarios">Comentarios*</label>
-                <textarea name="comentarios" cols="37" rows="4" id="comentarios"></textarea>
+                <textarea name="comentarios" cols="37" rows="2" id="comentarios"></textarea>
+
+                <div id="archivos"><p>¡Arrastrá aquí 3 fotos de tu jardín para asesorarte mejor y realizar bocetos del futuro proyecto!</p></div>
 
                 <input type="submit" id="submit">
                 <p>* campos obligatorios</p>
@@ -214,9 +216,10 @@
             <p>2021</p>
         </div>
     </footer>
-    <script type="text/javascript" src="jsFlor/infousuariocontacto.js"></script>
+    <!-- <script type="text/javascript" src="jsFlor/infousuariocontacto.js"></script> -->
     <script type="text/javascript" src="jsFlor/validarformulario.js"></script>
     <script type="text/javascript" src="jsFlor/calculadora.js"></script>
+    <script type="text/javascript" src="jsFlor/dragdrop.js"></script>
 </body>
 
 </html>
