personalizacion de texto segun cant de fotos adj

--- a/contacto.html
+++ b/contacto.html
@@ -150,7 +150,7 @@
                 <label for="comentarios">Comentarios*</label>
                 <textarea name="comentarios" cols="37" rows="2" id="comentarios"></textarea>
 
-                <div id="archivos"><p>¡Arrastrá aquí 3 fotos de tu jardín para asesorarte mejor y realizar bocetos del futuro proyecto!</p></div>
+                <div id="archivos"><p>¡Arrastrá aquí fotos de tu jardín para asesorarte mejor y realizar bocetos del futuro proyecto!</p></div>
 
                 <input type="submit" id="submit">
                 <p>* campos obligatorios</p>
